# gpgex

./: .gitignore  ABOUT-NLS  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.rc  autogen.sh  configure.ac
doc/: Makefile.am  gpgex-de.html  gpgex-en.html  gpgex.texi
m4/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  ar.po  de.po  es.po  fr.po  it.po  nl.po  pl.po  pt.po  ru.po  sv.po  zh_CN.po  zh_TW.po
src/: ChangeLog  GNU.GnuPG.Gcc64Support.manifest  Makefile.am  README.ext  bitmaps.cc  bitmaps.h  client.cc  client.h  debug.h  exechelp.c  exechelp.h  gpgex-class.cc  gpgex-class.h  gpgex-factory.cc  gpgex-factory.h  gpgex.cc  gpgex.def  gpgex.h  gpgex.manifest.in  icons.rc  main.cc  main.h  registry.c  registry.h  resource.h  versioninfo.rc.in  w32-gettext.c  w32-gettext.h
