# doc - Automake template
# Copyright (C) 2007 g10 Code GmbH
# 
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

## Process this file with automake to produce Makefile.in

DISTCLEANFILES = gpgex.cps

info_TEXINFOS = gpgex.texi
gpgex_TEXINFOS = gpl.texi 


